# bluetooth_sdk

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml
include/bt_kmn/: bluetooth.h  commands.h
src/: bluetooth.c  commands.c  test.c
